# spot-cursor

./: Cargo.toml  README.md  build.rs  build.sh  resources.rc
.cargo/: config.toml
src/: config.rs  constants.rs  hooks.rs  main.rs  settings_dialog.rs  tray.rs  types.rs
src/spotlight/: mod.rs  region.rs  state.rs  window.rs
