[package]
name = "spot-cursor"
version = "1.0.0"
edition = "2021"
authors = ["Néstor"]
description = "Spotlight portable para localizar el cursor - estilo PowerToys"
license = "MIT"
repository = "https://github.com/neslonso/spot-cursor"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",           # Para trackbars/sliders
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",              # Para system tray
    "Win32_Storage_FileSystem",    # Para guardar config
    "Win32_System_Registry",       # Para autostart
]

[profile.release]
opt-level = "z"   # Optimizar tamaño
lto = true        # Link-time optimization
codegen-units = 1 # Mejor optimización
panic = "abort"   # Reduce tamaño
strip = true      # Strip symbols
